--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
   deployment_group: obo-stage
   on:
     repo: PrincetonOBO/OBOBackend
-    branch: f/beisner/user_server
+    branch: master
